--- a/src/main/resources/uploadPath.ini
+++ b/src/main/resources/uploadPath.ini
@@ -2,3 +2,4 @@ USER_PLACE_IMG_PATH=/upload/img/user/place/
 USER_PERSONAL_INFO_IMG_PATH=/WEB-INF/upload/img/personal/
 USER_HEAD_PORTRAIT_IMG_PATH=/upload/img/user/head_portrait/
 USER_IMAGE_SPACE_PATH=/upload/img/user/space/
+USER_ID_CARD_PATH=/WEB-INF/upload/img/id_card/
