--- a/pom.xml
+++ b/pom.xml
@@ -210,10 +210,16 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.11.Final</version>
         </dependency>
+
         <dependency>
-            <groupId>org.jboss.marshalling</groupId>
-            <artifactId>jboss-marshalling-river</artifactId>
-            <version>1.4.11.Final</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.1</version>
         </dependency>
 
     </dependencies>
