--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,12 @@
             <version>4.5.1</version>
         </dependency>
 
+        <!-- google protobuf -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
 
