--- a/src/main/resources/uploadPath.ini
+++ b/src/main/resources/uploadPath.ini
@@ -3,3 +3,4 @@ USER_PERSONAL_INFO_IMG_PATH=/WEB-INF/upload/img/personal/
 USER_HEAD_PORTRAIT_IMG_PATH=/upload/img/user/head_portrait/
 USER_IMAGE_SPACE_PATH=/upload/img/user/space/
 USER_ID_CARD_PATH=/WEB-INF/upload/img/id_card/
+COMMON_APPLY_IMAGE=/upload/img/user/apply/
