--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,8 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
             <version>4.3.7.RELEASE</version>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
             <version>4.3.7.RELEASE</version>
