--- a/src/main/webapp/WEB-INF/log4j/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j/log4j.properties
@@ -1,8 +1,13 @@
 # Global logging configuration
-log4j.rootLogger=DEBUG, stdout
-
+log4j.rootLogger=debug, stdout,D,E
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
-
+### 输出到日志文件 ###
+log4j.appender.D=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.D.File=${catalina.home}/logs/log.log
+log4j.appender.D.Append=true
+log4j.appender.D.layout=org.apache.log4j.PatternLayout
+log4j.appender.D.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+log4j.appender.D.DatePattern='.'yyyy-MM-dd'.log'
