--- a/src/main/resources/uploadPath.ini
+++ b/src/main/resources/uploadPath.ini
@@ -5,3 +5,4 @@ USER_IMAGE_SPACE_PATH=/upload/img/user/space/
 USER_ID_CARD_PATH=/WEB-INF/upload/img/id_card/
 COMMON_APPLY_IMAGE=/upload/img/user/apply/
 USER_ASSIST_PATH=/upload/img/user/assist/
+ORDER_PROOF_PATH=/upload/img/user/order_proof/
