--- a/src/main/resources/filter.ini
+++ b/src/main/resources/filter.ini
@@ -1,2 +1,2 @@
 excludedPages=/login*.*,/register*.*,/retrieve*.*,/upload/*.*,/pages/index/qm-indexLogin.jsp*,/pages/register/*.*,/updatePassword.action
-staticFiles=.css,.js,.woff,woff2,.ttf,.jpg,.png
+staticFiles=.css,.js,.woff,woff2,.ttf,.jpg,.png,.ico
